[tool.poetry]
name = "rpi-reactive-gpio"
version = "0.1.6"
description = "Syntax sugar for controlling RPi.GPIO with reactive design."
authors = ["MarkParker5 <markparker.it@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rpi_reactive_gpio"}]
homepage = "https://pypi.org/project/rpi-reactive-gpio/"
repository = "https://github.com/MarkParker5/rpi-reactive-gpio"
documentation = "https://github.com/MarkParker5/rpi-reactive-gpio/blob/main/README.md"
keywords = ["raspberry-pi", "gpio", "reactive", "rxpy", "rx", "rpi", "rpi-gpio", "RPi.GPIO"]

[tool.poetry.dependencies]
python = "^3.10"
raspi-gpio = "^0.1.0"

[tools.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
